# LoRa-Project

./: .gitignore  02_paper_dissection_bam_lln_lossy_compression.md.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Design Doc.md  LICENSE_TODO.md  NOTICE  README.ko.md  README.md  SECURITY.md  START_HERE.md  SUPPORT.md  pyproject.toml
ChirpChirp-main/: .gitignore  readme.md
docs/: 01_design_doc_experiment_plan.md  E22-900T22S_User_Manual_Deconstructed.md  bam_codec_artifacts.md  bam_ml_review.md  metrics_definition.md  patch_notes.md  phase0_c50_field.md  phase1_dataset_collection.md  phase2_bam_training.md  phase3_on_air_validation.md  phase4_energy_evaluation.md  phy_profiles_adr_code.md  project_execution_plan.md  protocol_packet_format.md  radio_constraints_e22.md  reproducibility.md  review_checklist.md  runbook_uart_sensing.md  sensing_pipeline.md  sx1262_must_know_notes.md  toa_estimation.md
loralink_mllc/: __init__.py  cli.py
scripts/: capture_serial_jsonl.py  e22_tool.py  eval_bam_dataset.py  kpi_check.py  make_bam_identity.py  package_run.py  phase2_sweep_bam.py  phase2_train_bam.py  phase3_report.py  phase4_energy_report.py  plot_phase_results.py  validate_run.py
tests/: test_artifacts_manifest.py  test_artifacts_misc_branches.py  test_bam_codec_error_branches.py  test_bam_codec_inference.py  test_cli_coverage.py  test_codecs_error_branches.py  test_end_to_end_mock.py  test_experiments_error_branches.py  test_latency_logging.py  test_logging_schema.py  test_metrics_more.py  test_mock_radio_more.py  test_packet.py  (+13 more)
(+120 files in other folders)
